client-cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec: 
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector: 
    component: web
