postgres-cluster-services.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec: 
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
  selector: 
    component: postgres
