redis-cluster-services.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec: 
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
  selector: 
    component: redis
